--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -2050,6 +2050,34 @@ a:hover:active {
   border: var(--cardborder);
 }
 
+#scheduleimportcontainer{
+    position:relative;
+    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.08), /* bottom soft shadow */
+    inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);
+}
+
+#scheduleimportcontainer::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 20px;
+  background: linear-gradient(to bottom right, rgba(255,255,255,0.05), transparent);
+  pointer-events: none;
+  mix-blend-mode: screen;
+  z-index:10000000;
+}
+
+#scheduleimportcontainer::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 20px;
+  pointer-events: none;
+  z-index: 1000000;
+  box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 0 25px rgba(255, 255, 255, 0.15);
+  border: var(--cardborder);
+}
+
 #qrcodecontainerdiv{
     position:relative;
     box-shadow: 0 2px 15px rgba(0, 0, 0, 0.08), /* bottom soft shadow */
@@ -2520,7 +2548,7 @@ background: var(--blurbackground);
 box-shadow: var(--blurbackgroundshadowcolor);
 backdrop-filter: blur(12px);
 -webkit-backdrop-filter: blur(12px);
-border: 1px solid rgba(125, 125, 125, 0.3);
+border: 1px solid rgba(43, 43, 43, 0.3);
 display: flex;
 align-items: center;
 animation: toastslideIn 0.3s ease forwards;
