--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -163,6 +163,7 @@ display: inline-block;
 .selectedbackgroundpicker {
     margin: 10px !important;
     height: 0.5in;
+    width: 1in;
     font-size: 20px;
     font-weight: 100;
     border-radius: 20px;
@@ -615,6 +616,7 @@ form {
     margin: auto;
     width: 50%;
     text-align: center;
+    
 }
 
 h1 {
@@ -1769,6 +1771,19 @@ a:hover:active {
         border: none;
         transition: 0.3s all;
     }
+
+    .selectedbackgroundpicker {
+        margin: 10px !important;
+        height: 0.5in;
+        width: 0.7in;
+        font-size: 20px;
+        font-weight: 100;
+        border-radius: 20px;
+        outline: 3px solid var(--selectedgreen);
+        background: transparent;
+        border: none;
+        transition: 0.3s all;
+    }
     .bgpickerimg{
         width:0.65in;
     }
@@ -2578,6 +2593,7 @@ width: 81px; /* Slight overlap to prevent gaps */
 height: 45px;
 flex-shrink: 0;
 margin-right: -1px; /* Compensate for overlap */
+
 }
 
 .curve:last-child {
