--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -647,7 +647,8 @@ p {
 }
 
 .texttip{
-    font-family: 'Dosis', sans-serif; font-size:16px;
+    font-family: 'Dosis', sans-serif !important;
+    font-size:16px !important;
 }
 
 a {
@@ -1859,17 +1860,8 @@ a:hover:active {
     z-index:100000000000000;
     }
 
-.notch-container .right{
-    opacity:0;
-}
-
-.notch-container .center{
-    opacity:0;
-}
-
-
     #innergear {
-        font-size: 30px;
+        font-size: 20px;
     }
 
     .datepicker {
