--- a/style.css
+++ b/style.css
@@ -64,11 +64,44 @@ section {
 .headerimg {
     height: 250px;
     border-radius: 20px;
+    object-fit: cover;
+    transition: 0.1s all;
+}
+
+.headerimgcontainer{
+    position:relative;
     margin: 10px;
     margin-left: 30px;
-    object-fit: cover;
-    transition: 1s all;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 1), /* bottom soft shadow */
+    inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);
+    width:fit-content;
+    border-radius: 20px;
+    height: 250px;
+    transition: transform 0.1s ease-out;
+z-index: 10;
 }
+
+.headerimgcontainer::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    border-radius: 20px;
+    background: linear-gradient(to bottom right, rgba(255,255,255,0.05), transparent);
+    pointer-events: none;
+    mix-blend-mode: screen;
+    z-index:10000;
+  }
+  
+  .headerimgcontainer::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    border-radius: 20px;
+    pointer-events: none;
+    z-index: 1000;
+    box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 0 25px rgba(255, 255, 255, 0.15);
+    border: var(--cardborder);
+  }
 
 .headerimgglow {
     position: relative;
@@ -425,12 +458,14 @@ nav img {
         max-width:35vw;
     }
 
-
+.headerimgcontainer{
+    margin-left: 10%;
+    width:80%;
+    margin-right: 10%;
+}
 
     .headerimg {
-        width: 80%;
-        margin-left: 10%;
-        margin-right: 10%;
+        width: 100%;
         object-fit: cover;
     }
 
