--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -646,6 +646,13 @@ z-index: 10000000;
     animation:schedulebackgroundgradient 100s infinite;
 }
 
+.playerContainer{
+    display:absolute;
+    opacity:0;
+    width:1px;
+    height: 1px;
+    overflow: hidden;
+}
 
 .clockslow {
     display: flex;
