--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -2641,6 +2641,8 @@ animation: settingslocked 0.4s linear;
 100% { transform: translate(0px); }
 }
 
+.emoji‑wrapper {position:relative; display:inline-block;}
+
 #confettiEmojiPicker{
 width:100%;
 background:transparent;
@@ -2652,6 +2654,40 @@ color:white;
 font-family:Fredoka One;
 font-size:20px;
 }
+
+#emojiOverlay{
+    position:absolute; left:0; top:0; width:100%; height:100%;
+    display:flex; align-items:center; justify-content:center;
+    font-size:20px; pointer-events:none;
+    transform-origin:center;
+    opacity:0;
+    inset:0; 
+    z-index: 1000;
+    transition:1s;
+  }
+
+  #confettiEmojiPicker::placeholder {
+    opacity: 0;        /* or color: transparent; */
+  }
+
+  #confettiEmojiPicker:active #emojiOverlay,
+  #confettiEmojiPicker:focus #emojiOverlay,
+  #confettiEmojiPicker:not(:placeholder-shown) #emojiOverlay {
+    opacity: 0 !important;
+    z-index: -1;
+  }
+  
+  @keyframes emojiPop {
+    0%   { transform: scale(0.4); opacity: 0; }
+    12%  { transform: scale(1.3); opacity: 1; }
+    20%  { transform: scale(1); }
+    90%  { transform: scale(1); opacity: 1; }
+    100% { transform: scale(0.4); opacity: 0; }
+  }
+  
+  .pop{
+    animation: emojiPop 5s cubic-bezier(0.22, 1, 0.36, 1);
+  }
 
 
     .progress-bar {
