--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -96,8 +96,21 @@ input[type="color"] {
     background: transparent;
     border: none;
     cursor: pointer;
-    vertical-align:top;
+    /*vertical-align:top;*/
     display:inline-block;
+}
+
+.fgcolorpicker::after{
+    content: "\f042";
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    mix-blend-mode: difference;
+    color: white;
+    font-size: 24px;
 }
 
 .clradd{
@@ -2480,7 +2493,7 @@ a:hover:active {
     #dropdownbuttonexceptionday{
         font-family: 'Fredoka One';
         text-decoration: none;
-        color: var(--mainforegroundcolor);
+        color: white;
         border-radius: 20px;
         border-top-right-radius: 0px;
         border-bottom-right-radius: 0px;
