--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -880,7 +880,7 @@ a:hover:active {
 
 /* Enabled */
 .toggle.enabled {
-    background-color: #00df52;
+    background-color: #8426FF;
     box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3),
                 inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);
 }
@@ -1111,12 +1111,25 @@ a:hover:active {
             padding:0px;
     overflow:hidden;
     white-space:nowrap;
+    transition:0.3s all ease;
+        }
+        .sidebaranchor i{
+            transition:0.3s all ease;
         }
         .sidebaranchor:hover{
             position:initial !important;
             top:initial !important;
             box-shadow: none !important;
             display:initial !important;
+        }
+
+        .sidebaranchor.active {
+            background: none;
+        }
+
+        .sidebaranchor.active i {
+            transform: scale(1.1);
+            margin-right:6px;
         }
         #settingssidebarpaneshareable{
             width:90%;
