--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -2096,7 +2096,7 @@ a:hover:active {
 .bg-color {
     right: 0;
     top: 0;
-    filter: blur(--bgbluramount);
+    filter: blur(var(--bgbluramount));
     z-index: -1;
     mix-blend-mode: luminosity;
     width: 200%;
@@ -2107,7 +2107,7 @@ a:hover:active {
 .bg-color-fast {
     right: 0;
     top: 0;
-    filter: blur(--bgbluramount);
+    filter: blur(var(--bgbluramount));
     z-index: -1;
     mix-blend-mode: luminosity;
     width: 200%;
@@ -2118,7 +2118,7 @@ a:hover:active {
 .bg-color-slow {
     right: 0;
     top: 0;
-    filter: blur(--bgbluramount);
+    filter: blur(var(--bgbluramount));
     z-index: -1;
     mix-blend-mode: luminosity;
     width: 200%;
@@ -2129,7 +2129,7 @@ a:hover:active {
 .bg-black {
     left: 0;
     bottom: 0;
-    filter: blur(--bgbluramount);
+    filter: blur(var(--bgbluramount));
     z-index: -10;
     animation-direction: reverse;
     animation-delay: 10s;
@@ -2141,7 +2141,7 @@ a:hover:active {
 .bg-black-fast {
     left: 0;
     bottom: 0;
-    filter: blur(--bgbluramount);
+    filter: blur(var(--bgbluramount));
     z-index: -10;
     animation-direction: reverse;
     animation-delay: 10s;
@@ -2153,7 +2153,7 @@ a:hover:active {
 .bg-black-slow {
     left: 0;
     bottom: 0;
-    filter: blur(--bgbluramount);
+    filter: blur(var(--bgbluramount));
     z-index: -10;
     animation-direction: reverse;
     animation-delay: 10s;
